--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,117 +16,124 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <header class="header">
-        <!-- <div class="container"> -->
-        <nav class="header-nav">
-            <a class="logo link logo-top" href="index.html"><span class="logo-web">Web</span>Studio</a>
+        <div class="container">
+            <a class="header-logo link logo-top" href="index.html"><span class="logo-web">Web</span>Studio</a>
             <ul class="header-list list">
                 <li class="header-item"><a href="index.html" class="header-link link">Студия</a></li>
                 <li class="header-item"><a href="portfolio.html" class="header-link link current">Портфолио</a></li>
                 <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
             </ul>
-        </nav>
-        <ul class="header-link list ">
-            <li><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-        <!-- </div> -->
+            <div class="header-connect">
+                <nav class="header-nav">
+                    <ul class="header-link list ">
+                        <li><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li><a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
     <main>
         <section class="hero-portfolio">
-            <h1>Ссылки</h1>
-            <ul class="hero-list list">
-                <li class="hero-item"><button type="button" class="hero-second-button pointer">Все</button></li>
-                <li class="hero-item"><button type="button" class="hero-second-button pointer">Веб-сайты</button></li>
-                <li class="hero-item"><button type="button" class="hero-second-button pointer">Приложения</button></li>
-                <li class="hero-item"><button type="button" class="hero-second-button pointer">Дизайн</button></li>
-                <li class="hero-item"><button type="button" class="hero-second-button pointer">Маркетинг</button></li>
-            </ul>
-            <ul class="hero-about-list list">
-                <li class="hero-about-item">
-                    <a class="hero-about-link link" href="">
-                    <img src="images/portfolio-img-1.jpg" alt="Показывает сайт">
-                    <h2 class="hero-about-title">Технокряк</h2>
-                    <p class="hero-about-title-type">Веб-сайт</p>
-                    </a>
-                </li>
-                <li class="hero-about-item">
-                    <a class="hero-about-link link" href="">
-                    <img src="images/portfolio-img-2.jpg" alt="Играют баскетболл">
-                    <h2 class="hero-about-title">Постер New Orlean vs Golden Star</h2>
-                    <p class="hero-about-title-type">Дизайн</p>
-                    </a>
-                </li>
-                <li class="hero-about-item">
-                    <a class="hero-about-link link" href="">
-                    <img src="images/portfolio-img-3.jpg" alt="Прыгает рыба">
-                    <h2 class="hero-about-title">Ресторан Seafood</h2>
-                    <p class="hero-about-title-type">Приложение</p>
-                    </a>
-                </li>
-                <li class="hero-about-item">
-                    <a class="hero-about-link link" href="">
-                    <img src="images/portfolio-img-4.jpg" alt="Показывает наушники">
-                    <h2 class="hero-about-title">Проект Prime</h2>
-                    <p class="hero-about-title-type">Маркетинг</p>
-                    </a>
-                </li>
-                <li class="hero-about-item">
-                    <a class="hero-about-link link" href="">
-                    <img src="images/portfolio-img-5.jpg" alt="Показывает коробки">
-                    <h2 class="hero-about-title">Проект Boxes</h2>
-                    <p class="hero-about-title-type">Приложение</p>
-                    </a>
-                </li>
-                <li class="hero-about-item">
-                    <a class="hero-about-link link" href="">
-                    <img src="images/portfolio-img-6.jpg" alt="Показывает сайт">
-                    <h2 class="hero-about-title">Inspiration has no Borders</h2>
-                    <p class="hero-about-title-type">Веб-сайт</p>
-                    </a>
-                </li>
-                <li class="hero-about-item">
-                    <a class="hero-about-link link" href="">
-                    <img src="images/portfolio-img-7.jpg" alt="Открывает книгу">
-                    <h2 class="hero-about-title">Издание Limited Edition</h2>
-                    <p class="hero-about-title-type">Дизайн</p>
-                    </a>
-                </li>
-                <li class="hero-about-item">
-                    <a class="hero-about-link link" href="">
-                    <img src="images/portfolio-img-8.jpg" alt="Показывает этикетку">
-                    <h2 class="hero-about-title">Проект LAB</h2>
-                    <p class="hero-about-title-type">Маркетинг</p>
-                    </a>
-                </li>
-                <li class="hero-about-item">
-                    <a class="hero-about-link link" href="">
-                    <img src="images/portfolio-img-9.jpg" alt="Печатает на ноутбуке">
-                    <h2 class="hero-about-title">Growing Business</h2>
-                    <p class="hero-about-title-type">Приложение</p>
-                    </a>
-                </li>
-            </ul>
+            <div class="container">
+                <h1 class="visually-hidden">Ссылки</h1>
+                <ul class="hero-list list">
+                    <li class="hero-item"><button type="button" class="second-button pointer button1">Все</button></li>
+                    <li class="hero-item"><button type="button" class="second-button pointer button2">Веб-сайты</button></li>
+                    <li class="hero-item"><button type="button" class="second-button pointer button3">Приложения</button></li>
+                    <li class="hero-item"><button type="button" class="second-button pointer button4">Дизайн</button></li>
+                    <li class="hero-item"><button type="button" class="second-button pointer button5">Маркетинг</button></li>
+                </ul>
+                <ul class="hero-about-list list">
+                    <li class="hero-about-item">
+                        <a class="hero-about-link link" href="">
+                            <img src="images/portfolio-img-1.jpg" alt="Показывает сайт">
+                            <h2 class="hero-about-title">Технокряк</h2>
+                            <p class="hero-about-type">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li class="hero-about-item">
+                        <a class="hero-about-link link" href="">
+                            <img src="images/portfolio-img-2.jpg" alt="Играют баскетболл">
+                            <h2 class="hero-about-title">Постер New Orlean vs Golden Star</h2>
+                            <p class="hero-about-type">Дизайн</p>
+                        </a>
+                    </li>
+                    <li class="hero-about-item">
+                        <a class="hero-about-link link" href="">
+                            <img src="images/portfolio-img-3.jpg" alt="Прыгает рыба">
+                            <h2 class="hero-about-title">Ресторан Seafood</h2>
+                            <p class="hero-about-type">Приложение</p>
+                        </a>
+                    </li>
+                    <li class="hero-about-item">
+                        <a class="hero-about-link link" href="">
+                            <img src="images/portfolio-img-4.jpg" alt="Показывает наушники">
+                            <h2 class="hero-about-title">Проект Prime</h2>
+                            <p class="hero-about-type">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li class="hero-about-item">
+                        <a class="hero-about-link link" href="">
+                            <img src="images/portfolio-img-5.jpg" alt="Показывает коробки">
+                            <h2 class="hero-about-title">Проект Boxes</h2>
+                            <p class="hero-about-type">Приложение</p>
+                        </a>
+                    </li>
+                    <li class="hero-about-item">
+                        <a class="hero-about-link link" href="">
+                            <img src="images/portfolio-img-6.jpg" alt="Показывает сайт">
+                            <h2 class="hero-about-title">Inspiration has no Borders</h2>
+                            <p class="hero-about-type">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li class="hero-about-item">
+                        <a class="hero-about-link link" href="">
+                            <img src="images/portfolio-img-7.jpg" alt="Открывает книгу">
+                            <h2 class="hero-about-title">Издание Limited Edition</h2>
+                            <p class="hero-about-type">Дизайн</p>
+                        </a>
+                    </li>
+                    <li class="hero-about-item">
+                        <a class="hero-about-link link" href="">
+                            <img src="images/portfolio-img-8.jpg" alt="Показывает этикетку">
+                            <h2 class="hero-about-title">Проект LAB</h2>
+                            <p class="hero-about-type">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li class="hero-about-item">
+                        <a class="hero-about-link link" href="">
+                            <img src="images/portfolio-img-9.jpg" alt="Печатает на ноутбуке">
+                            <h2 class="hero-about-title">Growing Business</h2>
+                            <p class="hero-about-type">Приложение</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a class="logo link logo-bottom" href="index.html"><span class="logo-web-color">Web</span>Studio</a>
-        <address>
-            <ul class="footer-list list">
-                <li class="footer-item">
-                    <a class="footer-location link" href="https://goo.gl/maps/WTRpLGhR1zs4KhXf9" target="_blank"
-                        rel="noopener nofollow noreferrer">
-                        г. Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li class="footer-item">
-                    <a class="footer-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="footer-item">
-                    <a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="container">
+            <a class="footer-logo link logo-bottom" href="index.html"><span class="logo-web">Web</span>Studio</a>
+            <address class="footer list">
+                <ul class="footer-list list">
+                    <li class="footer-link">
+                        <a class="footer-location link" href="https://goo.gl/maps/WTRpLGhR1zs4KhXf9" target="_blank"
+                            rel="noopener nofollow noreferrer">
+                            г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li class="footer-link">
+                        <a class="footer-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-link">
+                        <a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
