--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,141 +8,133 @@
     <title>Webstudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <header class="header">
-        <nav class="header-nav">
-        <a class="logo link logo-top" href="index.html"><span class="logo-web">Web</span>Studio</a>
-        <ul class="header-list list">
-            <li class="header-item"><a href="index.html" class="header-link link current">Студия</a></li>
-            <li class="header-item"><a href="portfolio.html" class="header-link link">Портфолио</a></li>
-            <li class="header-item"><a href="" class="header-link link ">Контакты</a></li>
-        </ul>
-        </nav>
-        <ul class="header-link list">
-            <li class="header-item"><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="header-item"><a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        <div class="container">
+            <a class="header-logo link logo-top" href="index.html"><span class="logo-web">Web</span>Studio</a>
+            <ul class="header-list list">
+                <li class="header-item"><a href="index.html" class="header-link link current">Студия</a></li>
+                <li class="header-item"><a href="portfolio.html" class="header-link link">Портфолио</a></li>
+                <li class="header-item"><a href="" class="header-link link ">Контакты</a></li>
+            </ul>
+            <div class="header-connect">
+                <nav class="header-nav">
+                    <ul class="header-link list">
+                        <li class="header-item"><a class="header-mail link"
+                                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="header-item"><a class="header-tel link" href="tel:+380961111111">+38 096 111 11
+                                11</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
     <main>
         <section class="hero">
-            <h1 class="hero-title">Эффективные решения</br>для вашего бизнеса</h1>
-            <button type="button" class="hero-main-button pointer">Заказать услугу</button>
+            <div class="container">
+                <h1 class="hero-title">Эффективные решения</br>для вашего бизнеса</h1>
+                <button type="button" class="main-button pointer">Заказать услугу</button>
         </section>
         <section class="benefits">
-            <h2 class="visually-hidden">Наши преимущества</h2>
-        <ul class="benefits-list list">
-            <li class="benefits-item">
-                <h3 class="benefits-item-title">Внимание к деталям</h3>
-                <p class="benefits-item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
-            <li class="benefits-item">
-                <h3 class="benefits-item-title">Пунктуальность</h3>
-                <p class="benefits-item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li>
-            <li class="benefits-item">
-                <h3 class="benefits-item-title">Планирование</h3>
-                <p class="benefits-item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
-            <li class="benefits-item">
-                <h3 class="benefits-item-title">Современные технологии</h3>
-                <p class="benefits-item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>
-        </ul>
+            <div class="container">
+                <h2 class="visually-hidden">Наши преимущества</h2>
+                <ul class="benefits-list list">
+                    <li class="benefits-item">
+                        <h3 class="benefits-title">Внимание к деталям</h3>
+                        <p class="benefits-text">Идейные соображения, а также начало повседневной работы по формированию
+                            позиции.</p>
+                    </li>
+                    <li class="benefits-item">
+                        <h3 class="benefits-title">Пунктуальность</h3>
+                        <p class="benefits-text">Задача организации, в особенности же рамки и место обучения кадров
+                            влечет за собой.</p>
+                    </li>
+                    <li class="benefits-item">
+                        <h3 class="benefits-title">Планирование</h3>
+                        <p class="benefits-text">Равным образом консультация с широким активом в значительной степени
+                            обуславливает.</p>
+                    </li>
+                    <li class="benefits-item">
+                        <h3 class="benefits-title">Современные технологии</h3>
+                        <p class="benefits-text">Значимость этих проблем настолько очевидна, что реализация плановых
+                            заданий.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="gallery">
-            <h2 class="gallery-top-title">Чем мы занимаемся</h2>
-            <ul class="gallery-list list">
-                <li class="gallery-item">
-                    <img src="./images/img-1.jpg" 
-                    alt="печатает на клавиатуре"
-                    width="370"
-                    height="294"
-                    />
-                </li>
-                <li class="gallery-item">
-                    <img src="./images/img-2.jpg"
-                    alt="смотрит в смартфон"
-                    width="370"
-                    height="294"
-                    />
-                </li>
-                <li class="gallery-item">
-                    <img src="./images/img-3.jpg"
-                    alt="использует планшет"
-                    width="370"
-                    height="294"
-                    />
-                </li>
-                
-            </ul>
+            <div class="container">
+                <h2 class="gallery-title">Чем мы занимаемся</h2>
+                <ul class="gallery-list list">
+                    <li class="gallery-item">
+                        <img src="./images/img-1.jpg" alt="печатает на клавиатуре" width="370" height="294" />
+                    </li>
+                    <li class="gallery-item">
+                        <img src="./images/img-2.jpg" alt="смотрит в смартфон" width="370" height="294" />
+                    </li>
+                    <li class="gallery-item">
+                        <img src="./images/img-3.jpg" alt="использует планшет" width="370" height="294" />
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="masters">
-            <h2 class="masters-top-title">Наша команда</h2>
-            <ul class="masters-list list">
-                <li class="masters-item">
-                    <img src="./images/master-1.jpg"
-                    alt="Product Designer"
-                    width="270"
-                    height="260"
-                    />
-                    <h3 class="masters-item-title">Игорь Демьяненко</h3>
-                    <p class="masters-item-text">Product Designer</p>
-                </li>
-                <li class="masters-item">
-                    <img src="./images/master-2.jpg"
-                    alt="Frontend Developer"
-                    width="270"
-                    height="260"
-                    />
-                    <h3 class="masters-item-title">Ольга Репина</h3>
-                    <p class="masters-item-text">Frontend Developer</p>
-                </li>
-                <li class="masters-item">
-                    <img src="./images/master-3.jpg"
-                    alt="Marketing"
-                    width="270"
-                    height="260"
-                    />
-                    <h3 class="masters-item-title">Николай Тарасов</h3>
-                    <p class="masters-item-text">Marketing</p>
-                </li>
-                <li class="masters-item">
-                    <img src="./images/master-4.jpg"
-                    alt="UI Designer"
-                    width="270"
-                    height="260"
-                    />
-                    <h3 class="masters-item-title">Михаил Ермаков</h3>
-                    <p class="masters-item-text">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="masters-title">Наша команда</h2>
+                <ul class="masters-list list">
+                    <li class="masters-item">
+                        <img src="./images/master-1.jpg" alt="Product Designer" width="270" height="260" />
+                        <h3 class="masters-name">Игорь Демьяненко</h3>
+                        <p class="masters-text">Product Designer</p>
+                    </li>
+                    <li class="masters-item">
+                        <img src="./images/master-2.jpg" alt="Frontend Developer" width="270" height="260" />
+                        <h3 class="masters-name">Ольга Репина</h3>
+                        <p class="masters-text">Frontend Developer</p>
+                    </li>
+                    <li class="masters-item">
+                        <img src="./images/master-3.jpg" alt="Marketing" width="270" height="260" />
+                        <h3 class="masters-name">Николай Тарасов</h3>
+                        <p class="masters-text">Marketing</p>
+                    </li>
+                    <li class="masters-item">
+                        <img src="./images/master-4.jpg" alt="UI Designer" width="270" height="260" />
+                        <h3 class="masters-name">Михаил Ермаков</h3>
+                        <p class="masters-text">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a class="logo link logo-bottom" href="index.html"><span class="logo-web-color">Web</span>Studio</a>
-        <address class="footer list">
-            <ul class="footer-link list">
-                <li class="footer-item">
-                    <a class="footer-location link" href="https://goo.gl/maps/WTRpLGhR1zs4KhXf9"
-                    target="_blank"
-                    rel="noopener nofollow noreferrer">
-                    г. Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li class="footer-item">
-                    <a class="footer-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="footer-item">
-                    <a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="container">
+            <a class="footer-logo link logo-bottom" href="index.html"><span class="logo-web">Web</span>Studio</a>
+            <address class="footer list">
+                <ul class="footer-list list">
+                    <li class="footer-link">
+                        <a class="footer-location link" href="https://goo.gl/maps/WTRpLGhR1zs4KhXf9" target="_blank"
+                            rel="noopener nofollow noreferrer">
+                            г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li class="footer-link">
+                        <a class="footer-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-link">
+                        <a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
+
 </html>
