--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <div class="container">
                 <h1 class="hero-title">Эффективные решения</br>для вашего бизнеса</h1>
                 <button type="button" class="main-button pointer">Заказать услугу</button>
+            </div>
         </section>
         <section class="benefits">
             <div class="container">
