--- a/portfolio.html
+++ b/portfolio.html
@@ -22,15 +22,17 @@
         <div class="container">
             <a class="header-logo link logo-top" href="index.html"><span class="logo-web">Web</span>Studio</a>
             <ul class="header-list list">
-                <li class="header-item"><a href="index.html" class="header-link link">Студия</a></li>
+                <li class="header-item"><a href="index.html" class="header-link link ">Студия</a></li>
                 <li class="header-item"><a href="portfolio.html" class="header-link link current">Портфолио</a></li>
-                <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
+                <li class="header-item"><a href="" class="header-link link ">Контакты</a></li>
             </ul>
             <div class="header-connect">
                 <nav class="header-nav">
-                    <ul class="header-link list ">
-                        <li><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li><a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <ul class="header-link list">
+                        <li class="header-item"><a class="header-mail link"
+                                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="header-item"><a class="header-tel link" href="tel:+380961111111">+38 096 111 11
+                                11</a></li>
                     </ul>
                 </nav>
             </div>
