--- a/portfolio.html
+++ b/portfolio.html
@@ -39,78 +39,100 @@
         </div>
     </header>
     <main>
-        <section class="hero-portfolio">
+        <section class="hero-portfolio section">
             <div class="container">
                 <h1 class="visually-hidden">Ссылки</h1>
                 <ul class="hero-list list">
                     <li class="hero-item"><button type="button" class="second-button pointer button1">Все</button></li>
-                    <li class="hero-item"><button type="button" class="second-button pointer button2">Веб-сайты</button></li>
-                    <li class="hero-item"><button type="button" class="second-button pointer button3">Приложения</button></li>
-                    <li class="hero-item"><button type="button" class="second-button pointer button4">Дизайн</button></li>
-                    <li class="hero-item"><button type="button" class="second-button pointer button5">Маркетинг</button></li>
+                    <li class="hero-item"><button type="button" class="second-button pointer button2">Веб-сайты</button>
+                    </li>
+                    <li class="hero-item"><button type="button"
+                            class="second-button pointer button3">Приложения</button></li>
+                    <li class="hero-item"><button type="button" class="second-button pointer button4">Дизайн</button>
+                    </li>
+                    <li class="hero-item"><button type="button" class="second-button pointer button5">Маркетинг</button>
+                    </li>
                 </ul>
                 <ul class="hero-about-list list">
                     <li class="hero-about-item">
                         <a class="hero-about-link link" href="">
                             <img src="images/portfolio-img-1.jpg" alt="Показывает сайт">
-                            <h2 class="hero-about-title">Технокряк</h2>
-                            <p class="hero-about-type">Веб-сайт</p>
+                            <div class="hero-about-content">
+                                <h2 class="hero-about-title">Технокряк</h2>
+                                <p class="hero-about-type">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li class="hero-about-item">
                         <a class="hero-about-link link" href="">
                             <img src="images/portfolio-img-2.jpg" alt="Играют баскетболл">
-                            <h2 class="hero-about-title">Постер New Orlean vs Golden Star</h2>
-                            <p class="hero-about-type">Дизайн</p>
+                            <div class="hero-about-content">
+                                <h2 class="hero-about-title">Постер New Orlean vs Golden Star</h2>
+                                <p class="hero-about-type">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li class="hero-about-item">
                         <a class="hero-about-link link" href="">
                             <img src="images/portfolio-img-3.jpg" alt="Прыгает рыба">
-                            <h2 class="hero-about-title">Ресторан Seafood</h2>
-                            <p class="hero-about-type">Приложение</p>
+                            <div class="hero-about-content">
+                                <h2 class="hero-about-title">Ресторан Seafood</h2>
+                                <p class="hero-about-type">Приложение</p>
+                            </div>
                         </a>
                     </li>
                     <li class="hero-about-item">
                         <a class="hero-about-link link" href="">
                             <img src="images/portfolio-img-4.jpg" alt="Показывает наушники">
-                            <h2 class="hero-about-title">Проект Prime</h2>
-                            <p class="hero-about-type">Маркетинг</p>
+                            <div class="hero-about-content">
+                                <h2 class="hero-about-title">Проект Prime</h2>
+                                <p class="hero-about-type">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li class="hero-about-item">
                         <a class="hero-about-link link" href="">
                             <img src="images/portfolio-img-5.jpg" alt="Показывает коробки">
-                            <h2 class="hero-about-title">Проект Boxes</h2>
-                            <p class="hero-about-type">Приложение</p>
+                            <div class="hero-about-content">
+                                <h2 class="hero-about-title">Проект Boxes</h2>
+                                <p class="hero-about-type">Приложение</p>
+                            </div>
                         </a>
                     </li>
                     <li class="hero-about-item">
                         <a class="hero-about-link link" href="">
                             <img src="images/portfolio-img-6.jpg" alt="Показывает сайт">
-                            <h2 class="hero-about-title">Inspiration has no Borders</h2>
-                            <p class="hero-about-type">Веб-сайт</p>
+                            <div class="hero-about-content">
+                                <h2 class="hero-about-title">Inspiration has no Borders</h2>
+                                <p class="hero-about-type">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li class="hero-about-item">
                         <a class="hero-about-link link" href="">
                             <img src="images/portfolio-img-7.jpg" alt="Открывает книгу">
-                            <h2 class="hero-about-title">Издание Limited Edition</h2>
-                            <p class="hero-about-type">Дизайн</p>
+                            <div class="hero-about-content">
+                                <h2 class="hero-about-title">Издание Limited Edition</h2>
+                                <p class="hero-about-type">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li class="hero-about-item">
                         <a class="hero-about-link link" href="">
                             <img src="images/portfolio-img-8.jpg" alt="Показывает этикетку">
-                            <h2 class="hero-about-title">Проект LAB</h2>
-                            <p class="hero-about-type">Маркетинг</p>
+                            <div class="hero-about-content">
+                                <h2 class="hero-about-title">Проект LAB</h2>
+                                <p class="hero-about-type">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li class="hero-about-item">
                         <a class="hero-about-link link" href="">
                             <img src="images/portfolio-img-9.jpg" alt="Печатает на ноутбуке">
-                            <h2 class="hero-about-title">Growing Business</h2>
-                            <p class="hero-about-type">Приложение</p>
+                            <div class="hero-about-content">
+                                <h2 class="hero-about-title">Growing Business</h2>
+                                <p class="hero-about-type">Приложение</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
