--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h1 class="hero-title">Эффективные решения</br>для вашего бизнеса</h1>
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="main-button pointer">Заказать услугу</button>
             </div>
         </section>
-        <section class="benefits">
+        <section class="benefits section">
             <div class="container">
                 <h2 class="visually-hidden">Наши преимущества</h2>
                 <ul class="benefits-list list">
@@ -72,7 +72,7 @@
                 </ul>
             </div>
         </section>
-        <section class="gallery">
+        <section class="gallery section">
             <div class="container">
                 <h2 class="gallery-title">Чем мы занимаемся</h2>
                 <ul class="gallery-list list">
@@ -88,12 +88,13 @@
                 </ul>
             </div>
         </section>
-        <section class="masters">
+        <section class="masters section">
             <div class="container">
                 <h2 class="masters-title">Наша команда</h2>
                 <ul class="masters-list list">
                     <li class="masters-item">
-                        <img src="./images/master-1.jpg" alt="Product Designer" width="270" height="260" />
+                        <img class="masters-img" src="./images/master-1.jpg" alt="Product Designer" width="270"
+                            height="260" />
                         <h3 class="masters-name">Игорь Демьяненко</h3>
                         <p class="masters-text">Product Designer</p>
                     </li>
@@ -119,7 +120,7 @@
     <footer class="footer">
         <div class="container">
             <a class="footer-logo link logo-bottom" href="index.html"><span class="logo-web">Web</span>Studio</a>
-            <address class="footer list">
+            <address class="footer-adress">
                 <ul class="footer-list list">
                     <li class="footer-link">
                         <a class="footer-location link" href="https://goo.gl/maps/WTRpLGhR1zs4KhXf9" target="_blank"
