--- a/portfolio.html
+++ b/portfolio.html
@@ -142,7 +142,7 @@
     <footer class="footer">
         <div class="container">
             <a class="footer-logo link logo-bottom" href="index.html"><span class="logo-web">Web</span>Studio</a>
-            <address class="footer list">
+            <address class="footer-adress list">
                 <ul class="footer-list list">
                     <li class="footer-link">
                         <a class="footer-location link" href="https://goo.gl/maps/WTRpLGhR1zs4KhXf9" target="_blank"
