--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
                 <h2 class="masters-title">Наша команда</h2>
                 <ul class="masters-list list">
                     <li class="masters-item">
-                        <img class="masters-img" src="./images/master-1.jpg" alt="Product Designer" width="270"
-                            height="260" />
+                        <img src="./images/master-1.jpg" alt="Product Designer" width="270" height="260" />
                         <h3 class="masters-name">Игорь Демьяненко</h3>
                         <p class="masters-text">Product Designer</p>
                     </li>
